--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  flutter_swiper: ^1.1.6
 
 dev_dependencies:
   flutter_test:
@@ -74,3 +75,8 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+# 引入字体文件
+fonts:
+  - family: iconfont
+    fonts:
+      - asset: assets/fonts/iconfont.ttf
